@@ -325,6 +325,7 @@ namespace Chummer
             ContactKarmaDiscount,
             ContactKarmaMinimum,
             GenetechEssMultiplier,
+            AllowSpriteFettering,
             NumImprovementTypes // 🡐 This one should always be the last defined enum           
         }
 
