@@ -50,6 +50,7 @@ Application Fixes:
 - Moved magic strings used for calculating cyberlimb attributes into explicit hashsets. This allows the 2050 cyberlimb enhancement and customisations to work properly. 
 - Removed an additional cost from purchasing Gear that incorrectly caused quantity to be counted twice.
 - Fixed a regression in the SpellCategory improvement that prevented it being used, as it was renamed to spellcategorydicepool.
+- The Technoshaman Stream properly allows Sprites to be Fettered, granting unlimited services. Existing characters with this Stream will need to Reapply Improvements for it to work.
 
 Data Changes:
 
